@startuml

title __LOGIC's Class Diagram__\n

  package by.khomenko.task02.logic {
    class Dock {
        {static} - LOGGER : Logger
        + Dock()
        + call()
    }
  }
  

  package by.khomenko.task02.logic {
    class Storage {
        {static} - LOGGER : Logger
        - currentLoad : int
        - items : Container[]
        - lock : Lock
        - notFull : Condition
        - notEmpty : Condition
        - putIndex : int
        - takeIndex : int
        + Storage()
        + isEmpty()
        + isFull()
        + getCapacity()
        + put()
        + take()
    }
  }
  

  Dock -up-|> Callable
  Dock o-- Port : port
  Dock o-- Ship : ship


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
